--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -210,6 +210,8 @@ jobs:
           TEST_TEAM_MEMBER_PASSWORD: ${{ secrets.TEST_TEAM_MEMBER_PASSWORD }}
           TEST_ADMIN_EMAIL: ${{ secrets.TEST_ADMIN_EMAIL }}
           TEST_ADMIN_PASSWORD: ${{ secrets.TEST_ADMIN_PASSWORD }}
+          # Required for employee-number login test in auth.spec.ts
+          TEST_ADMIN_EMPLOYEE: ${{ secrets.TEST_ADMIN_EMPLOYEE }}
           TEST_ORG_ID: ${{ secrets.TEST_ORG_ID }}
         run: |
           missing=()
@@ -219,7 +221,7 @@ jobs:
             TEST_SUPPORT_AGENT_EMAIL TEST_SUPPORT_AGENT_PASSWORD
             TEST_OPERATIONS_MANAGER_EMAIL TEST_OPERATIONS_MANAGER_PASSWORD
             TEST_TEAM_MEMBER_EMAIL TEST_TEAM_MEMBER_PASSWORD
-            TEST_ADMIN_EMAIL TEST_ADMIN_PASSWORD
+            TEST_ADMIN_EMAIL TEST_ADMIN_PASSWORD TEST_ADMIN_EMPLOYEE
             TEST_ORG_ID
           )
           for key in "${required_keys[@]}"; do
