--- a/env.example
+++ b/env.example
@@ -63,6 +63,21 @@ ALLOW_DEMO_LOGIN=false
 # Internal API secret for server-to-server authentication
 # This should be DIFFERENT from NEXTAUTH_SECRET (security best practice)
 
+# === PLAYWRIGHT E2E CREDENTIALS (used by tests/e2e/auth.spec.ts, critical flows) ===
+# Provide real test users in shared non-production envs; locally you can leave blank and rely on offline fallback.
+TEST_ADMIN_EMAIL=
+TEST_ADMIN_PASSWORD=
+TEST_ADMIN_EMPLOYEE=
+TEST_TEAM_MEMBER_EMAIL=
+TEST_TEAM_MEMBER_PASSWORD=
+TEST_TEAM_MEMBER_EMPLOYEE=
+# Optional: generic superadmin creds used by utils/auth.ts
+TEST_USER_EMAIL=
+TEST_USER_PASSWORD=
+TEST_EMPLOYEE_NUMBER=
+# Optional: path to pre-generated storage state for offline auth fallback
+AUTH_STORAGE_STATE=tests/state/superadmin.json
+
 # =============================================================================
 # FACILITY MANAGEMENT (FM) FEATURE FLAGS
 # =============================================================================
