--- a/env.example
+++ b/env.example
@@ -511,7 +511,8 @@ LOG_LEVEL=info               # Options: error, warn, info, verbose, debug
 # These must be set for E2E tests to run - no fallback defaults are used.
 # 
 # SECURITY: Never commit actual credentials. Use .env.local for local testing,
-# or configure CI secrets for automated pipelines.
+# or configure GitHub Actions Secrets for CI (forked PRs will not have secrets
+# and will use generated placeholders).
 #
 # Create test users in your database with appropriate roles:
 # - FINANCE_OFFICER: TEAM_MEMBER role + subRole: 'FINANCE_OFFICER'
