--- a/env.example
+++ b/env.example
@@ -386,8 +386,8 @@ SENDGRID_TEMPLATE_PASSWORD_RESET=d-your_password_reset_template_id
 SENDGRID_TEMPLATE_NOTIFICATION=d-your_notification_template_id
 SENDGRID_TEMPLATE_INVOICE=d-your_invoice_template_id
 
-# Legacy Support (backward compatibility)
-FROM_EMAIL=noreply@yourdomain.com
+# NOTE: FROM_EMAIL is defined in the core Email section above (noreply@fixzit.sa)
+# Do not redefine here to avoid conflicts
 
 # Option 2: SMTP (Gmail, Office365, etc.)
 EMAIL_HOST=smtp.gmail.com
