fix(e2e): Remove offline fallback documentation, reinforce fail-fast pattern
- Updated env.example to point to E2E credentials section
- Removed confusing offline fallback notes
- Added detailed comment explaining why offline fallbacks were removed
- Emphasizes security-first approach: real credentials or skip

--- a/env.example
+++ b/env.example
@@ -63,20 +63,10 @@ ALLOW_DEMO_LOGIN=false
 # Internal API secret for server-to-server authentication
 # This should be DIFFERENT from NEXTAUTH_SECRET (security best practice)
 
-# === PLAYWRIGHT E2E CREDENTIALS (used by tests/e2e/auth.spec.ts, critical flows) ===
-# Provide real test users in shared non-production envs; locally you can leave blank and rely on offline fallback.
-TEST_ADMIN_EMAIL=
-TEST_ADMIN_PASSWORD=
-TEST_ADMIN_EMPLOYEE=
-TEST_TEAM_MEMBER_EMAIL=
-TEST_TEAM_MEMBER_PASSWORD=
-TEST_TEAM_MEMBER_EMPLOYEE=
-# Optional: generic superadmin creds used by utils/auth.ts
-TEST_USER_EMAIL=
-TEST_USER_PASSWORD=
-TEST_EMPLOYEE_NUMBER=
-# Optional: path to pre-generated storage state for offline auth fallback
-AUTH_STORAGE_STATE=tests/state/superadmin.json
+# NOTE: E2E Playwright test credentials are configured in the
+# "E2E TEST CREDENTIALS (RBAC VALIDATION)" section at the end of this file.
+# NO FALLBACK CREDENTIALS exist - tests fail-fast if credentials are missing.
+# See that section for detailed setup instructions.
 
 # =============================================================================
 # FACILITY MANAGEMENT (FM) FEATURE FLAGS
@@ -505,16 +495,26 @@ DEBUG=false
 LOG_LEVEL=info               # Options: error, warn, info, verbose, debug
 
 # =============================================================================
-# E2E TESTING (Playwright)
+# E2E TEST CREDENTIALS (RBAC VALIDATION)
 # =============================================================================
 # Credentials for E2E tests validating RBAC (Role-Based Access Control).
-# These must be set for E2E tests to run - no fallback defaults are used.
-# 
-# SECURITY: Never commit actual credentials. Use .env.local for local testing,
-# or configure GitHub Actions Secrets for CI (forked PRs will not have secrets
-# and will use generated placeholders).
 #
-# Create test users in your database with appropriate roles:
+# ⚠️  IMPORTANT: NO FALLBACK CREDENTIALS EXIST
+# Tests FAIL-FAST if these are not configured. This is intentional:
+# - RBAC tests MUST use real credentials to validate role-based access
+# - Fake/dummy credentials would mask permission regressions
+# - Fork PRs automatically skip E2E tests (secrets unavailable)
+#
+# SETUP INSTRUCTIONS:
+# 1. Create test users in your database with appropriate roles
+# 2. Configure credentials in .env.local (never commit to git)
+# 3. For CI, configure GitHub Actions Secrets
+#
+# SECURITY: Never commit actual credentials. Use:
+# - .env.local for local testing (already in .gitignore)
+# - GitHub Actions Secrets for CI
+#
+# Create test users in your database with these roles:
 # - FINANCE_OFFICER: TEAM_MEMBER role + subRole: 'FINANCE_OFFICER'
 # - HR_OFFICER: TEAM_MEMBER role + subRole: 'HR_OFFICER'
 # - SUPPORT_AGENT: TEAM_MEMBER role + subRole: 'SUPPORT_AGENT'
