feat(e2e): add requireOrgIdPresence option for strict tenant validation
- Add requireOrgIdPresence option to expectAllowedWithBodyCheck()
- Enforces org_id MUST exist in responses (not just validates IF present)
- Clear error messaging explains tenant isolation security risk
- Document ALLOW_MISSING_TEST_ORG_ID in env.example
- Lists 4 spec files using this variable for local dev bypass

Addresses: Final audit round MT-004 and DOC-001

--- a/env.example
+++ b/env.example
@@ -562,6 +562,14 @@ TEST_ADMIN_EMPLOYEE=
 # This catches cross-tenant data leaks that status-only checks miss
 TEST_ORG_ID=
 
+# Optional: Bypass TEST_ORG_ID requirement for local development
+# When running E2E tests locally without TEST_ORG_ID, tests will fail by default
+# Set this to 'true' to acknowledge the skip and continue without tenant validation
+# WARNING: This should NEVER be enabled in CI - it's for local DX only
+# 
+# Used by: auth.spec.ts, subrole-api-access.spec.ts, work-orders-flow.spec.ts, marketplace-flow.spec.ts
+ALLOW_MISSING_TEST_ORG_ID=false
+
 # =============================================================================
 # NOTES
 # =============================================================================
