fix(e2e): Harden tenant validation and disable offline MongoDB in CI
AUDIT-2025-12-01: E2E Test Hardening

Changes:
1. .gitignore: Add tests/state/*.json to prevent session token leakage
2. subrole-api-access.spec.ts: Fix inverted org_id validation logic
   - Previously: CI warned but continued without TEST_ORG_ID (bug)
   - Now: CI FAILS if TEST_ORG_ID missing (correct fail-fast behavior)
   - Forks still skip gracefully (can't access secrets)
3. fixzit-quality-gates.yml: ALLOW_OFFLINE_MONGODB changed from 'true' to 'false'
   - E2E tests must hit real MongoDB for meaningful RBAC/tenancy testing
   - With offline mode, API handlers return empty data masking regressions
4. auth.spec.ts: Check both org_id (snake_case) and orgId (camelCase)
   - Mongoose models use camelCase, some APIs use snake_case

Security: Prevents false-positive E2E passes that would mask tenant isolation bugs

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -312,9 +312,12 @@ jobs:
           GOOGLE_CLIENT_ID: ${{ env.GOOGLE_CLIENT_ID }}
           GOOGLE_CLIENT_SECRET: ${{ env.GOOGLE_CLIENT_SECRET }}
           
-          # Database - use offline mode with mock sessions
+          # Database - require real MongoDB for meaningful RBAC/tenancy testing
+          # AUDIT-2025-11-30: Changed from 'true' to 'false' to ensure E2E tests hit real DB
+          # With offline mode enabled, API handlers return empty data, making RBAC/tenancy
+          # checks validate empty payloads - allowing regressions to slip through undetected.
           MONGODB_URI: mongodb://localhost:27017/fixzit_test
-          ALLOW_OFFLINE_MONGODB: 'true'
+          ALLOW_OFFLINE_MONGODB: 'false'
           PLAYWRIGHT_TESTS: 'true'
           
           # Test environment
