fix(e2e): Harden tenant validation with recursive checks and fail-closed defaults
AUDIT-2025-11-30 Phase 13: Enhanced multi-tenant validation

## Changes

### CI Build Configuration (Critical)
- Changed ALLOW_OFFLINE_MONGODB from 'true' to 'false' in build steps
- Affects: e2e-tests.yml, fixzit-quality-gates.yml
- Reason: Next.js embeds env at build time; offline build + online test = split-brain
- Impact: E2E tests now validate against real MongoDB, not offline stubs

### Tenant Validation (Critical)
- Enhanced expectAllowedWithBodyCheck() with recursive validation
- Now walks nested wrappers: data, items, results (common paginated API patterns)
- Changed requireOrgIdPresence default: false → true when expectedOrgId provided
- Added explicit requireOrgIdPresence: true to 12 tenant-scoped test calls
- Improved error messages with path context (e.g., 'body.data[0]')

### Security Pattern
- Fail-closed: missing org_id/orgId now fails by default
- Detects wrapper-only objects to avoid false positives on pagination metadata
- Prevents cross-tenant data leaks in:
  - Direct responses: { org_id, ... }
  - Arrays: [{ org_id, ... }]
  - Wrapped: { data: [{ org_id, ... }] }
  - Paginated: { data: { items: [...] } }

Closes #AUDIT-TENANT-VALIDATION

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -169,12 +169,13 @@ jobs:
         env:
           NODE_ENV: test
           SKIP_ENV_VALIDATION: 'true'
-          ALLOW_OFFLINE_MONGODB: 'true'
+          # AUDIT-2025-11-30: Build with ALLOW_OFFLINE_MONGODB: 'false'
+          # Next.js embeds env values at build time for Server Components.
+          # Building with 'true' would bake offline paths into the bundle,
+          # making the test-runtime 'false' setting ineffective.
+          ALLOW_OFFLINE_MONGODB: 'false'
         run: |
-          echo "Building Next.js app for E2E tests..."
-          if [ "$ALLOW_OFFLINE_MONGODB" = "true" ]; then
-            echo "⏭️  Building in offline mode (MongoDB disabled)..."
-          fi
+          echo "Building Next.js app for E2E tests (MongoDB required)..."
           pnpm build || {
             echo "❌ Build failed! Checking for common issues..."
             echo "NODE_ENV: $NODE_ENV"
