--- a/env.example
+++ b/env.example
@@ -536,6 +536,9 @@ TEST_HR_OFFICER_EMPLOYEE=
 TEST_SUPPORT_AGENT_EMAIL=
 TEST_SUPPORT_AGENT_PASSWORD=
 TEST_SUPPORT_AGENT_EMPLOYEE=
+# REQUIRED for row-level RBAC: MongoDB _id of SUPPORT_AGENT test user
+# Used to verify agent only sees tickets assigned to them (not all org tickets)
+TEST_SUPPORT_AGENT_USER_ID=
 
 # Operations Manager (access to work orders, properties, marketplace APIs)
 TEST_OPERATIONS_MANAGER_EMAIL=
@@ -546,6 +549,9 @@ TEST_OPERATIONS_MANAGER_EMPLOYEE=
 TEST_TEAM_MEMBER_EMAIL=
 TEST_TEAM_MEMBER_PASSWORD=
 TEST_TEAM_MEMBER_EMPLOYEE=
+# REQUIRED for row-level RBAC: MongoDB _id of TEAM_MEMBER test user
+# Used to verify member only sees work orders assigned to them (not all org work orders)
+TEST_TEAM_MEMBER_USER_ID=
 
 # Admin user (full access to all modules)
 TEST_ADMIN_EMAIL=
